syntax = "proto3";

option csharp_namespace = "Proto.Command.AiSettings";

service AiSettingsCommandService {
  rpc SendChangeLanguageModel (ChangeLanguageModelCommand) returns (CommandResponse);
  rpc SendChangePrompt (ChangePromptCommand) returns (CommandResponse);
  rpc SendCreateAiSettings (CreateAiSettingsCommand) returns (CommandResponse);
}

message ChangeLanguageModelCommand {
  string aiSettingsId = 1;
  string languageModelPath = 2;
}

message ChangePromptCommand {
  string aiSettingsId = 1;
  string prompt = 2;
}

message CreateAiSettingsCommand {
  string aiSettingsId = 1;
  string prompt = 2;
  string languageModelPath = 3;
}

message CommandResponse {
  bool success = 1;
}
